<resources>
    <string name="app_name">Cristian Sedano CV</string>
    <string name="experience">Experience</string>
    <string name="skills">Skills</string>
    <string name="education">Education</string>
    <string name="linkedin">Linkedin</string>
    <string name="facebook">Facebook</string>
    <string name="textview">TextView</string>
    <string name="java">Java</string>
    <string name="android_sdk">Android SDK</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_libraries">Android Libraries</string>
    <string name="xml">XML</string>
    <string name="javascript">JavaScript</string>
    <string name="version_control_git">Version Control Git</string>
    <string name="demo">demo</string>
    <string name="_2016_2017_create_app_for_android">2016 / 2017 Create app for android</string>
    <string name="_2016_2017_app_development_for_android">2016 / 2017 App Development for android</string>
    <string name="_2017_actuality_gamemarker_studio">2017 / Actuality GameMarker Studio</string>
    <string name="github">GitHub</string>
    <string name="hello_if_you_press_de_button_you_can_see_my_personals_projects">Hello, please press the button to see my personal projects</string>
    <string name="_1996_2000_ies_ramon_coll_i_rodes">1996 / 2000 IES Ramon Coll I Rodes</string>
</resources>
